objects/Veda_Payment__c.object
<CustomObject>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Veda_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Veda Account</label>
        <referenceTo>Veda_Account__c</referenceTo>
        <relationshipLabel>Veda Payment</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Veda Payment</label>
    <nameField>
        <label>Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Veda Payment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>